test-fix:on intervention overflow ,add scroll

--- a/src/modules/Intervention/components/Header/components/InterventionList/intervention-list.css
+++ b/src/modules/Intervention/components/Header/components/InterventionList/intervention-list.css
@@ -5,4 +5,9 @@
     gap: 16px;
     flex-direction: row;
     justify-content: space-between;
+
+}
+.intervention-list{
+    max-width: 100%;
+    overflow: auto;
 }
