--- a/src/modules/Intervention/components/Header/intervention-header.css
+++ b/src/modules/Intervention/components/Header/intervention-header.css
@@ -1,5 +1,5 @@
 .header-container {
-    min-width: 100%;
+    width: 100%;
     background: #FFFFFF;
     border-bottom: 1px solid #D5DDE5;
     box-shadow: 0 3px 4px #D5DDE5;
